refactor(config): extract nested config classes and add Javadoc compliance
Extracts inner configuration classes from AppProperties into standalone
files to improve code organization and reduce file size. Adds Javadoc
comments to public classes and methods per JD1 requirements. Removes
magic literals by extracting constants. Adds validation via @PostConstruct.
Simplifies ApiKeyLoggingConfig by inlining log messages for readability.

- Extract Rag → RetrievalAugmentationConfig
- Extract LocalEmbedding, RemoteEmbedding, Docs → DocumentationConfig
- Extract Diagnostics, CorsConfig, SpringDocsUtils
- Add Javadoc to JavaChatApplication, AiConfig, ApiKeyLoggingConfig
- Replace magic numbers with named constants in AiConfig
- Add configuration validation in AppProperties
- Simplify ApiKeyLoggingConfig by removing over-engineered LOG_* constants